# Simple_FastAPI_Project

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yaml
bruno/Simple_FastAPI_Project/: opencollection.yml
bruno/Simple_FastAPI_Project/auth/: folder.yml  login.yml  signup.yml
bruno/Simple_FastAPI_Project/auth user 2/: folder.yml  login.yml  signup.yml
bruno/Simple_FastAPI_Project/auth user 3/: folder.yml  login.yml  signup.yml
bruno/Simple_FastAPI_Project/document/: delete document.yml  folder.yml  get document.yml  update document.yml
bruno/Simple_FastAPI_Project/environments/: env.yml
bruno/Simple_FastAPI_Project/projects/: all projects.yml  create project.yml  delete project.yml  get project documents.yml  get project.yml  invite user to project.yml  update project info.yml  upload project documents.yml
src/: app.py  openapi.json
src/commons/: authentication.py  constants.py  exceptions_handler.py  log_helper.py
src/crud/: document_crud.py  project_crud.py  user_crud.py  user_project_crud.py
src/models/: document_model.py  project_model.py  user_model.py  user_project_model.py
src/routers/: __init__.py  document_route.py  project_route.py  user_route.py
src/schemas/: document_schema.py  project_schema.py  user_project_schema.py  user_schema.py
src/services/: __init__.py  document_service.py  project_service.py  user_service.py
tests/smoke/: conftest.py  test_smoke_document.py  test_smoke_project.py  test_smoke_user.py
(+9 files in other folders)
